gulpfile.js file is cleaned

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,8 @@
 doctype html
 html
 	head
-    	title
-    	link(rel='stylesheet', href='/stylesheets/style.css')
+		title
+		link(rel='stylesheet', href='/stylesheets/style.css')
 	body
 		p Hello Sujith
+		block content
